--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "set NODE_OPTIONS=--openssl-legacy-provider && next",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && next build & next export",
+    "build": "next build ",
     "start": "next start"
   },
   "dependencies": {
