--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "set NODE_OPTIONS=--openssl-legacy-provider && next",
     "build": "next build ",
-    "start": "next start"
+    "start": "next start --port 3003"
   },
   "dependencies": {
     "@apollo/client": "~3.4.0",
