--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-otp-input": "^3.0.4",
     "react-owl-carousel2": "^0.3.0",
     "react-redux": "^7.2.5",
+    "react-select": "^5.8.0",
     "react-slide-toggle": "^0.3.5",
     "react-sticky-box": "^0.9.3",
     "react-tabs": "^3.2.2",
