--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
-#NEXT_PUBLIC_SERVER_URL=http://localhost:4000
-#NEXT_PUBLIC_ASSET_URI=http://localhost:4000
+NEXT_PUBLIC_SERVER_URL=http://localhost:3018
+NEXT_PUBLIC_ASSET_URI=http://localhost:3018
 
 
-NEXT_PUBLIC_SERVER_URL= https://adapi.credot.dev
-NEXT_PUBLIC_ASSET_URI=  https://adapi.credot.dev
+# NEXT_PUBLIC_SERVER_URL= https://adapi.credot.dev
+# NEXT_PUBLIC_ASSET_URI=  https://adapi.credot.dev
