--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/client": "~3.4.0",
+    "@apollo/client": "~3.9.2",
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
     "@emotion/core": "^11.0.0",
@@ -28,6 +28,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^16.8.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.50.0",
     "react-icons": "^4.10.1",
     "react-image-lightbox": "^5.1.4",
     "react-image-magnifiers": "^1.4.0",
