--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/react-ssr": "^4.0.0",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "apollo-boost": "^0.4.9",
     "dayjs": "^1.11.10",
     "fbemitter": "^3.0.0",
