--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_SERVER_URL=http://localhost:3018
-NEXT_PUBLIC_ASSET_URI=http://localhost:3018
+# NEXT_PUBLIC_SERVER_URL=http://localhost:3018
+# NEXT_PUBLIC_ASSET_URI=http://localhost:3018
 
 
 # NEXT_PUBLIC_SERVER_URL= https://adapi.credot.dev
