--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "2.1.0",
   "private": true,
   "scripts": {
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && next",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && next build & next export",
-    "start": "next start",
-    "prod-build": "export NODE_OPTIONS=--openssl-legacy-provider && next build",
-    "prod-start": "next start --port 3003"
+    "dev": "cross-env next",
+"build": "cross-env  next build && next export",
+"start": "next start",
+"prod-build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
+"prod-start": "next start --port 3003"
+
   },
   "dependencies": {
     "@apollo/client": "~3.9.2",
@@ -55,6 +56,7 @@
     "sass": "^1.42.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "file-loader": "^6.2.0"
   },
   "engines": {
