--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "2.1.0",
   "private": true,
   "scripts": {
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && next",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && next build & next export",
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && next",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && next build & next export",
+    "prod-build": "set NODE_OPTIONS=--openssl-legacy-provider && next build",
     "start": "next start",
-    "prod-build": "export NODE_OPTIONS=--openssl-legacy-provider && next build",
     "prod-start": "next start --port 3003"
 
   },
