--- a/package.json
+++ b/package.json
@@ -8,26 +8,19 @@
     "prod-build": "set NODE_OPTIONS=--openssl-legacy-provider && next build",
     "start": "next start",
     "prod-start": "next start --port 3003"
-
   },
   "dependencies": {
-    "@apollo/client": "~3.9.2",
+    "@apollo/client": "^3.8.6",
+    "@apollo/experimental-nextjs-app-support": "^0.4.3",
     "@apollo/react-hooks": "^4.0.0",
-    "@apollo/react-ssr": "^4.0.0",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.1",
-    "@uidotdev/usehooks": "^2.4.1",
-    "apollo-boost": "^0.4.9",
+    "@reduxjs/toolkit": "^2.2.2",
     "dayjs": "^1.11.10",
-    "fbemitter": "^3.0.0",
     "google-map-react": "^2.1.10",
-    "graphql": "^15.6.0",
-    "graphql-tag": "^2.12.5",
+    "graphql": "^16.8.1",
     "js-cookie": "^3.0.1",
-    "next": "^10.0.8",
-    "next-apollo": "^5.0.4",
-    "next-redux-saga": "^4.1.2",
-    "next-redux-wrapper": "^7.0.5",
+    "next": "^13.4.13",
     "rc-tree": "^5.2.1",
     "react": "^16.8.0",
     "react-awesome-reveal": "^3.8.1",
