--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "set NODE_OPTIONS=--openssl-legacy-provider && next",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && next build & next set",
     "prod-build": "set NODE_OPTIONS=--openssl-legacy-provider && next build",
-    "start": "next start",
+    "start": "next start --port 3003",
     "prod-start": "next start --port 3003"
   },
   "dependencies": {
@@ -20,9 +20,11 @@
     "google-map-react": "^2.1.10",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.1",
-    "next": "^13.4.13",
+    "next": "^10.2.3",
+    "next-apollo": "^5.0.8",
+    "next-redux-wrapper": "^8.1.0",
     "rc-tree": "^5.2.1",
-    "react": "^16.8.0",
+    "react": "^16.14.0",
     "react-awesome-reveal": "^3.8.1",
     "react-countdown": "^2.3.2",
     "react-dom": "^16.8.0",
@@ -46,7 +48,7 @@
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1" 
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
