--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.4.1",
     "@reduxjs/toolkit": "^2.2.2",
     "dayjs": "^1.11.10",
+    "fbemitter": "^3.0.0",
     "google-map-react": "^2.1.10",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.1",
@@ -48,7 +49,7 @@
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "sass": "^1.42.1" 
+    "sass": "^1.42.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
