--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,11 @@
-# NEXT_PUBLIC_SERVER_URL=http://localhost:3018
-# NEXT_PUBLIC_ASSET_URI=http://localhost:3018
+NEXT_PUBLIC_SERVER_URL=http://localhost:3018/graphql
+NEXT_PUBLIC_ASSET_URI=http://localhost:3018/graphql
 
 
 # NEXT_PUBLIC_SERVER_URL= https://adapi.credot.dev
 # NEXT_PUBLIC_ASSET_URI=  https://adapi.credot.dev
+
+
+# NEXT_PUBLIC_SERVER_URL= "http://adapi.arabdeals.com/graphql"
+# NEXT_PUBLIC_ASSET_URI= "http://adapi.arabdeals.com/graphql"
+
