--- a/.env
+++ b/.env
@@ -1,4 +1,12 @@
 # NEXT_PUBLIC_SERVER_URL= "http://localhost:3014/graphql"
 
 
-NEXT_PUBLIC_SERVER_URL= "https://adserver.credot.dev/graphql"
+# NEXT_PUBLIC_SERVER_URL= "https://adserver.credot.dev/graphql"
+
+# NEXT_PUBLIC_SERVER_URL="http://adserver.arabdeals.com"
+
+
+NEXT_PUBLIC_SERVER_URL= "http://adapi.arabdeals.com/graphql"
+
+
+
